--- a/oberlin/tharack/static/tharack/files/about.css
+++ b/oberlin/tharack/static/tharack/files/about.css
@@ -10,16 +10,16 @@ body{
 .biography{
     position: relative;
     font-size: 18px;
-    background-color:rgb(15, 2, 2); 
+    background-color:rgb(15, 2, 2);
     color: rgb(117, 123, 124);
     widows: 40%;
-    position: absolute; 
+    position: absolute;
     padding: 1% 10px 10px 10px;
     top: 20%;
     border-radius: 10px;
     height: auto;
-    left: 4%; 
-    right: 50%;
+    left: 4%;
+    right: 4%;
     float: left;
     border-style: solid;
     border-color: aqua;
@@ -27,26 +27,26 @@ body{
 }
 .about-me{
     position: relative;
-    border-radius: 3em;
+    border-radius: 3px;
     margin: 20px 10px 10px 10px;
     text-align: justify;
     word-break: break-all;
+    box-shadow: 5px 2px 2px 5px rgba(0, 100, 205, .3);
 }
 .biography img{
     position: relative;
     display: grid;
     height:20em;
-    /* height:auto; */
     border-style: solid;
-    border-color: aqua;
+    /*border-color: aqua;*/
     border-radius: 10em;
-    left: 18%;
+    left: 30%;
     justify-content: center;
     align-items:center;
 }
 
 .hobby {
-    background-color:rgb(15, 2, 2); 
+    background-color:rgb(15, 2, 2);
     position: relative;
     float:right;
     display: grid;
@@ -55,11 +55,60 @@ body{
     border-style: solid;
     border-color: aqua;
     border-radius: 10px;
-    right: 4%;
+    right: 40%;
     justify-content: center;
     align-items:center;
-    top: 5em; 
+    top: 6em;
 
 
 
 }
+
+
+.identity {
+  float: left;
+  width: 60%; /* The width is 60%, by default */
+}
+
+@media screen and (max-width :800px) {
+  .biography img {
+    right : 20%;
+    position :relative;
+    height : 40%;
+    width : 40%
+    }
+    .about-me{
+     position : relative;
+    }
+}
+
+@media screen and (min-width :800px) {
+    .identify{
+        display: grid;
+        grid-auto-flow: column;
+        position: relative;
+        justify-content : center;
+        align-items : center;
+        width : 60%;
+        left: 20%;
+        top : 4em;
+
+    }
+    .biography img{
+        right : 20%;
+        position :relative;
+        height : 40%;
+        width : 40%
+    }
+    }
+    .about-me{
+        position : relative;
+    }
+
+
+
+
+
+
+
+
