--- a/oberlin/tharack/static/tharack/files/layout.css
+++ b/oberlin/tharack/static/tharack/files/layout.css
@@ -8,13 +8,19 @@ body{
 .nav-bar{
     background-color: rgb(19, 22, 22);
     display: block;
+    padding : 0 5 px;
     overflow: hidden;
+    position: relative;
+    height:6em;
+    /*box-sizing : border-box;*/
+
 }
 .nav-bar li{
-    display: inline-block;
+    display: flex;
+    /*flex-direction :row;*/
     position: relative;
-    float: right;
-    padding: 40px;
+    float: left;
+    padding: 10px;
 
 }
 .nav-bar li a{
@@ -24,6 +30,7 @@ body{
     font-size: 20px;
     color: rgb(42, 169, 174);
 }
+
 li:hover{
     text-decoration: underline;
     color: aqua;
@@ -44,6 +51,109 @@ h2{
     color: rgb(208, 107, 11);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     bottom: 120px;
-    margin: 2em 6em; 
+    margin: 2em 6em;
 }
+
+@media screen and (max-width :800px) {
+
+    h1{
+    position: relative;
+    font-size: 17px;
+    top: 3em;
+    justify-content: center;
+    color: rgb(224, 228, 220);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 1em 1em;
+    left : 3em;
+    }
+
+    h2{
+    position: relative;
+    font-size: 20px;
+    justify-content: center;
+    color: rgb(208, 107, 11);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 1em 1em;
+    top: 20em;
+    left : 3em;
+    }
+
+
+  .nav-bar li a{
+    position: relative;
+    float: left;
+    font-size: 12px;
+    padding: -15px;
+    }
+
+    .nav-bar li a:hover{
+        background-color : blue;
+        font-size : 16px;
+        transition : 0.5s;
+        padding : 2px;
+        border-radius : 2px;
+
+    }
+
+    .nav-bar li a:active{
+        background-color : blue;
+        transition : 10s;
+        padding : 2px;
+        border-radius : 2px;
+
+    }
+
+    .nav-bar{
+        background-color: rgb(19, 22, 22);
+        display: fixed;
+        overflow: hidden;
+        position: relative;
+        height:4em;
+
+    }
+ }
+
+@media screen and (min-width :800px) {
+
+
+    .nav-bar li a{
+        position : relative;
+        /*display : flex;*/
+        float : right;
+        text-transform : uppercase;
+        font-family : Ariel;
+        justify-content : center;
+        align-items: center;
+        font-size : 20px;
+        transition : 0.5s;
+        padding : 2px;
+        border-radius : 2px;
+
+    }
+
+    .nav-bar:hover{
+        background-color : white;
+        font-size : 20px;
+        transition : 0.5s;
+        text-decoration: none;
+        padding : 2px;
+        border-radius : 2px;
+
+    }
+
+    .nav-bar li a:hover{
+        background-color : blue;
+        font-size : 20px;
+        transition : 0.5s;
+        padding : 2px;
+        border-radius : 2px;
+        padding : 10px 10px 10px 10px;
+
+    }
+
+
+
+}
+
+
 
