--- a/oberlin/tharack/templates/tharack/layout.html
+++ b/oberlin/tharack/templates/tharack/layout.html
@@ -1,5 +1,4 @@
 {% load static%}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My personal portfolio</title>
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <!--<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>-->
     <link rel="stylesheet" href="{% static 'tharack/files/layout.css' %}">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,23 +16,17 @@
 
 <body>
     <section class="nav-bar">
-        <li id="about"><a href="{% url 'tharack:about' %}">about</a></li>
-        <li id="resume"><a href="#resume">resume</a></li>
+        <ul>
+        <li class="home"><a href="{% url 'tharack:home' %}">home</a></li>
+        <li class="about"><a href="{% url 'tharack:about' %}">about</a></li>
         <li id="portfolio"><a href="#porfolio">porfolio</a></li>
+        <li id="resume"><a href="{% url 'tharack:resume' %}">resume</a></li>
         <li id="contact"><a href="{% url 'tharack:contact' %}">contact</a></li>
-        <li id="home"><a href="{% url 'tharack:home' %}">home</a></li>
+        </ul>
 
     </section>
-    
-    {% block body %}  
+
+    {% block body %}
     {% endblock  %}
 </body>
-<script>
-    var typed = new Typed('h2', {
-    strings: ["Software engineer","computer scientist"],
-    typeSpeed: 60,
-    backSpeed : 60,
-    loop:true
-    });
-</script>
 </html>
