--- a/oberlin/tharack/templates/tharack/layout.html
+++ b/oberlin/tharack/templates/tharack/layout.html
@@ -11,7 +11,6 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
 </head>
 
 <body>
@@ -19,8 +18,8 @@
         <ul>
         <li class="home"><a href="{% url 'tharack:home' %}">home</a></li>
         <li class="about"><a href="{% url 'tharack:about' %}">about</a></li>
-        <li id="portfolio"><a href="#porfolio">porfolio</a></li>
-        <li id="resume"><a href="{% url 'tharack:resume' %}">resume</a></li>
+        <li id="portfolio"><a href="{% url 'tharack:portfolio' %}">porfolio</a></li>
+        <li id="resume"><a href="">resume</a></li>
         <li id="contact"><a href="{% url 'tharack:contact' %}">contact</a></li>
         </ul>
 
