--- a/oberlin/tharack/static/tharack/files/contact.css
+++ b/oberlin/tharack/static/tharack/files/contact.css
@@ -1,3 +1,9 @@
 .contact{
-    background-color: rgb(27, 26, 24);
+    position: relative;
+    background-color: rgb(51, 71, 112);
+}
+
+.contact h3{
+    font-size: 40px;
+
 }
