--- a/oberlin/tharack/static/tharack/files/about.css
+++ b/oberlin/tharack/static/tharack/files/about.css
@@ -22,7 +22,7 @@ body{
     right: 4%;
     float: left;
     border-style: solid;
-    border-color: aqua;
+    /* border-color: aqua; */
     border-radius: 2em;
 }
 .about-me{
