--- a/oberlin/tharack/static/tharack/files/contact.css
+++ b/oberlin/tharack/static/tharack/files/contact.css
@@ -1,9 +1,89 @@
-.contact{
+
+.contact_bar{
+    display: flex;
+    flex-direction:row ;
     position: relative;
-    background-color: rgb(51, 71, 112);
+    background-color: rgb(20, 25, 35);
+    top: 10em;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 15%;
+    height: 50vh;
+    border-radius: 10px;
 }
 
-.contact h3{
-    font-size: 40px;
+.contact h3, h4{
+    padding-left: 15%;
+    padding-right: 15%;
+    color:coral;
+    font-style: italic;
+    display: grid;
+    font-size: 18px;
+
+
+    
+
+}
+h4{
+    padding-bottom: 20%;
+}
+
+.message{
+    position: inherit;
+    background-color: rgb(13, 43, 103);
+    min-width: 40%;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+    left: 15%;
+    padding: 14px;
+    width: 60%;
+    
+    
+    
+    
+}
+.email{
+    font-size: 24px;
+    position: absolute;
+    display: grid;
+    justify-content: center;
+    align-self: center;
+    padding: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    width: 80%;
+    height: 30px;
+
+}
+
+.comment{
+    position: absolute;
+    background-color: cornsilk;
+    display: grid;
+    justify-content: center;
+    align-self: center;
+    font-style: italic;
+    padding: 10px;
+    min-width: 30%;
+    width: 80%;
+    max-width: 80%;
+    height: 200px;
+    max-height: 200px;
+    top: 70px;
+    font-size: 24px;
+}
+
+.btn{
+    position: absolute;
+    display: grid;
+    justify-content: center;
+    align-self: center;
+    background-color:rgb(102, 16, 181);
+    font-size: 24px;
+    border: 3px;
+    top: 13em;
+    width: 30%;
+    height: 50px;
 
 }
