--- a/oberlin/tharack/static/tharack/files/layout.css
+++ b/oberlin/tharack/static/tharack/files/layout.css
@@ -6,13 +6,14 @@ body{
 }
 
 .nav-bar{
-    background-color: rgb(19, 22, 22);
+    background-color: rgb(22, 11, 45);
+    letter-spacing: 3px;
     display: block;
     padding : 0 5 px;
     overflow: hidden;
     position: relative;
     height:6em;
-    /*box-sizing : border-box;*/
+    box-sizing : border-box;
 
 }
 .nav-bar li{
@@ -25,7 +26,7 @@ body{
 }
 .nav-bar li a{
     text-decoration: none;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     font-weight: bold;
     font-size: 20px;
     color: rgb(42, 169, 174);
@@ -87,17 +88,19 @@ h2{
     }
 
     .nav-bar li a:hover{
-        background-color : blue;
+        /* background-color : blue; */
+        text-decoration: underline;
+
         font-size : 16px;
-        transition : 0.5s;
+        /* transition : 0.5s; */
         padding : 2px;
         border-radius : 2px;
 
     }
 
     .nav-bar li a:active{
-        background-color : blue;
-        transition : 10s;
+        /* background-color : blue; */
+        /* transition : 10s; */
         padding : 2px;
         border-radius : 2px;
 
@@ -120,30 +123,34 @@ h2{
         position : relative;
         /*display : flex;*/
         float : right;
-        text-transform : uppercase;
+        text-transform : capitalize;
         font-family : Ariel;
         justify-content : center;
         align-items: center;
         font-size : 20px;
-        transition : 0.5s;
+        color: white;
+        /* transition : 0.5s; */
         padding : 2px;
         border-radius : 2px;
 
     }
 
     .nav-bar:hover{
-        font-size : 20px;
+        /* font-size : 20px; */
         /* transition : 0.5s; */
         text-decoration: none;
-        padding : 2px;
+        /* padding : 2px; */
         border-radius : 2px;
 
     }
 
     .nav-bar li a:hover{
-        background-color : blue;
+        /* background-color : blue; */
         font-size : 20px;
-        transition : 0.5s;
+        text-decoration: underline;
+        color: aqua;
+        text-transform : capitalize;
+        /* transition : 0.5s; */
         padding : 2px;
         border-radius : 2px;
         padding : 10px 10px 10px 10px;
