--- a/oberlin/tharack/templates/tharack/contact.html
+++ b/oberlin/tharack/templates/tharack/contact.html
@@ -2,13 +2,26 @@
 {%load static%}
 
 {% block body %}
-    <link rel="stylesheet" href="{% static 'tharack/files/contact.css' %}">
-    <div class="contact">
-        <h3>phone: +1 440 458 1012</h3>
-        <h3>Email : tntirand@oberlin.edu</h3>
-        <h3>Address: 135 W. Lorain St</h3>
-        <h3>City : oberlin</h3>
-        <h3>State: Ohio</h3>
-        <h3>Country : United States</h3>
-    </div>
+    <link rel="stylesheet" href="{% static 'tharack/files/contact.css'%}">
+    <section class="contact_bar">
+        <div class="contact">
+            <h3>+1 440 458 1012</h3>
+            <h3>tharcissentira@gmail.com</h3>
+            <h3>135 W. Lorain St</h3>
+            <h3>oberlin</h3>
+            <h3>Ohio</h3>
+            <h4>United States</h4>
+        </div>
+        <div class="message">
+            <div class="email">
+                <input class="email" type="email" placeholder="Email" required>
+                <textarea class="comment "rows="4" cols="50">//comment</textarea>
+                <input class="btn" type="submit" value="submit">
+            </div>
+            
+            
+        </div>
+
+    </section>
+
 {% endblock body %}
