--- a/oberlin/tharack/templates/tharack/portfolio.html
+++ b/oberlin/tharack/templates/tharack/portfolio.html
@@ -8,78 +8,82 @@
     </div>
     <section class="project">
         <dic class="lines">
+            
             <div class="position">
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                    Python script that helps you  locate your files                    
+                    <br><br><span class="fa fa-heart"></span>
+                    <span class="fa fa-comment"></span>
+                    <span class="fa fa-share"></span>
                 </p>
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
-
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                    Python script that helps you  locate your files                    
+                    <br><br><span class="fa fa-heart"></span>
+                    <span class="fa fa-comment"></span>
+                    <span class="fa fa-share"></span>
                 </p>
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                        Python script that helps you  locate your files                    
+                        <br><br><span class="fa fa-heart"></span>
+                    <span class="fa fa-comment"></span>
+                    <span class="fa fa-share"></span>
                 </p>
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
-
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                    Python script that helps you  locate your files                    
+                    <br><br><span class="fa fa-heart"></span>
+                    <span class="fa fa-comment"></span>
+                    <span class="fa fa-share"></span>
                 </p>
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                    Python script that helps you  locate your files                
                 </p>
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
-
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                    Python script that helps you  locate your files
                 </p>
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                Python script that helps you  locate your files                
+            </p>
+                <p>
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                    Python script that helps you  locate your files
                 </p>
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
-
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                Python script that helps you  locate your files                
+            </p>
+                <p>
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                        Python script that helps you  locate your files
                 </p>
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                    Python script that helps you  locate your files                
                 </p>
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
-
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                Python script that helps you  locate your files
                 </p>
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                Python script that helps you  locate your files                
+            </p>
+                <p>
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                Python script that helps you  locate your files
                 </p>
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
-
-                </p>
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                Python script that helps you  locate your files                </p>
                 <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
-                </p>
-                <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
-
-                </p>
-                <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
-                </p>
-                <p>
-                    <img src="{% static 'tharack/images/myimage.jpeg' %}">
-                    However, if AI finds suspicious data like a virus or ransomware, it will notify the security manager and exclude the data from being stored for security reasons. However, to ensure the manager understands the wrongness of the AI, he has to analyze the information sent to double-check if it is ransomware or a virus.
-
+                    <img src="{% static 'tharack/images/image.jpeg' %}">
+                    Python script that helps you  locate your files
                 </p>
 
             </div>
