--- a/oberlin/tharack/static/tharack/files/about.css
+++ b/oberlin/tharack/static/tharack/files/about.css
@@ -29,6 +29,7 @@ body{
     position: relative;
     border-radius: 3px;
     margin: 20px 10px 10px 10px;
+    padding: 20px;
     text-align: justify;
     word-break: break-all;
     box-shadow: 5px 2px 2px 5px rgba(0, 100, 205, .3);
