--- a/oberlin/tharack/templates/tharack/contact.html
+++ b/oberlin/tharack/templates/tharack/contact.html
@@ -15,7 +15,10 @@
         <div class="message">
             <div class="email">
                 <input class="email" type="email" placeholder="Email" required>
-                <textarea class="comment "rows="4" cols="50">//comment</textarea>
+                <textarea class="comment "rows="4" cols="50">if suggestion:
+    $delete:${this message};
+    then type comment;
+                </textarea>
                 <input class="btn" type="submit" value="submit">
             </div>
             
