--- a/oberlin/tharack/templates/tharack/layout.html
+++ b/oberlin/tharack/templates/tharack/layout.html
@@ -21,7 +21,7 @@
         <li id="portfolio"><a href="{% url 'tharack:portfolio' %}">porfolio</a></li>
         <li id="resume"><a href="">resume</a></li>
         <li id="contact"><a href="{% url 'tharack:contact' %}">contact</a></li>
-        <li id="back"><a href=""><i class="fa fa-toggle-on"></i>background</a></li>
+        <span id="backs"onclick = "change()" class="fa fa-toggle-on"></span>
         
 
         </ul>
