--- a/oberlin/tharack/templates/tharack/layout.html
+++ b/oberlin/tharack/templates/tharack/layout.html
@@ -27,6 +27,12 @@
         </ul>
 
     </section>
+
+    </section>
+    <div class="menu">
+        <span id='show' onclick="toggles()" class="fa fa-bars"></span>
+        <span id="backs" onclick="change()" class="fa fa-toggle-on"></span>
+    </div>
     <script src="{% static 'tharack/backend/index.js' %}"></script>
 
     {% block body %}
