--- a/oberlin/tharack/static/tharack/files/layout.css
+++ b/oberlin/tharack/static/tharack/files/layout.css
@@ -1,169 +1,159 @@
-
-body{
+body {
     background-color: rgb(2, 2, 2);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: aliceblue;
-}
-
-.nav-bar{
+  }
+  
+  .nav-bar {
     background-color: rgb(22, 11, 45);
     letter-spacing: 3px;
-    display: block;
-    padding : 0 5 px;
+    display: none;
+    padding: 0 5 px;
     overflow: hidden;
     position: relative;
-    height:6em;
-    box-sizing : border-box;
-
-}
-.nav-bar li{
+    height: 6em;
+    box-sizing: border-box;
+  }
+  .nav-bar li {
     display: flex;
     /*flex-direction :row;*/
     position: relative;
     float: left;
     padding: 10px;
-
-}
-.nav-bar li a{
+  }
+  .nav-bar li a {
     text-decoration: none;
     /* text-transform: capitalize; */
     font-weight: bold;
     font-size: 20px;
     color: rgb(42, 169, 174);
-}
-
-li:hover{
+  }
+  
+  li:hover {
     text-decoration: underline;
     color: aqua;
     font-size: 20px;
-}
-h1{
+  }
+  h1 {
     position: relative;
     font-size: 40px;
     justify-content: center;
     color: rgb(224, 228, 220);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     margin: 4em 5em;
-}
-h2{
+  }
+  h2 {
     position: relative;
     font-size: 30px;
     justify-content: center;
     color: rgb(208, 107, 11);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     bottom: 120px;
     margin: 2em 6em;
-}
-
-@media screen and (max-width :800px) {
-
-    h1{
+  }
+  span {
+    display: block;
     position: relative;
-    font-size: 17px;
-    top: 3em;
-    justify-content: center;
-    color: rgb(224, 228, 220);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 1em 1em;
-    left : 3em;
-    }
-
-    h2{
-    position: relative;
-    font-size: 20px;
-    justify-content: center;
-    color: rgb(208, 107, 11);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 1em 1em;
-    top: 20em;
-    left : 3em;
-    }
-
-
-  .nav-bar li a{
-    position: relative;
-    float: left;
-    font-size: 12px;
-    padding: -15px;
-    }
-
-    .nav-bar li a:hover{
-        /* background-color : blue; */
-        text-decoration: underline;
-
-        font-size : 16px;
-        /* transition : 0.5s; */
-        padding : 2px;
-        border-radius : 2px;
-
-    }
-
-    .nav-bar li a:active{
-        /* background-color : blue; */
-        /* transition : 10s; */
-        padding : 2px;
-        border-radius : 2px;
-
-    }
-
-    .nav-bar{
-        background-color: rgb(19, 22, 22);
-        display: fixed;
-        overflow: hidden;
-        position: relative;
-        height:4em;
-
-    }
- }
- #back{
     float: right;
     margin-right: 50px;
- }
-
-@media screen and (min-width :800px) {
-
-
-    .nav-bar li a{
-        position : relative;
-        /*display : flex;*/
-        float : right;
-        text-transform : capitalize;
-        font-family : Ariel;
-        justify-content : center;
-        align-items: center;
-        font-size : 20px;
-        color: white;
-        /* transition : 0.5s; */
-        padding : 2px;
-        border-radius : 2px;
-
+    font-size: 30px;
+    /*   bottom:50px; */
+  }
+  span:hover {
+    color: aqua;
+    font-size: 30px;
+  }
+  
+  @media screen and (max-width: 800px) {
+    h1 {
+      position: relative;
+      font-size: 17px;
+      top: 3em;
+      justify-content: center;
+      color: rgb(224, 228, 220);
+      font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+      margin: 1em 1em;
+      left: 3em;
     }
-
-    .nav-bar:hover{
-        /* font-size : 20px; */
-        /* transition : 0.5s; */
-        text-decoration: none;
-        /* padding : 2px; */
-        border-radius : 2px;
-
+  
+    h2 {
+      position: relative;
+      font-size: 20px;
+      justify-content: center;
+      color: rgb(208, 107, 11);
+      font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+      margin: 1em 1em;
+      top: 20em;
+      left: 3em;
     }
-
-    .nav-bar li a:hover{
-        /* background-color : blue; */
-        font-size : 20px;
-        text-decoration: underline;
-        color: aqua;
-        text-transform : capitalize;
-        /* transition : 0.5s; */
-        padding : 2px;
-        border-radius : 2px;
-        padding : 10px 10px 10px 10px;
-
+  
+    .nav-bar li a {
+      position: relative;
+      float: left;
+      font-size: 12px;
+      padding: -15px;
     }
-
-
-
-}
-
-
-
+  
+    .nav-bar li a:hover {
+      /* background-color : blue; */
+      text-decoration: underline;
+  
+      font-size: 16px;
+      /* transition : 0.5s; */
+      padding: 2px;
+      border-radius: 2px;
+    }
+  
+    .nav-bar li a:active {
+      /* background-color : blue; */
+      /* transition : 10s; */
+      padding: 2px;
+      border-radius: 2px;
+    }
+  
+    .nav-bar {
+      background-color: rgb(19, 22, 22);
+      display: fixed;
+      overflow: hidden;
+      position: relative;
+      height: 4em;
+    }
+  }
+  
+  @media screen and (min-width: 800px) {
+    .nav-bar li a {
+      position: relative;
+      /*display : flex;*/
+      float: right;
+      text-transform: capitalize;
+      font-family: Ariel;
+      justify-content: center;
+      align-items: center;
+      font-size: 20px;
+      color: white;
+      /* transition : 0.5s; */
+      padding: 2px;
+      border-radius: 2px;
+    }
+  
+    .nav-bar:hover {
+      /* font-size : 20px; */
+      /* transition : 0.5s; */
+      text-decoration: none;
+      /* padding : 2px; */
+      border-radius: 2px;
+    }
+  
+    .nav-bar li a:hover {
+      /* background-color : blue; */
+      font-size: 20px;
+      text-decoration: underline;
+      color: aqua;
+      text-transform: capitalize;
+      /* transition : 0.5s; */
+      padding: 2px;
+      border-radius: 2px;
+      padding: 10px 10px 10px 10px;
+    }
+  }
+  
