--- a/oberlin/tharack/templates/tharack/contact.html
+++ b/oberlin/tharack/templates/tharack/contact.html
@@ -3,6 +3,7 @@
 
 {% block body %}
     <link rel="stylesheet" href="{% static 'tharack/files/contact.css'%}">
+    <script src="{% static 'tharack/backend/index.js' %}"></script>
     <section class="contact_bar">
         <div class="contact">
             <h3>+1 440 458 1012</h3>
