--- a/oberlin/tharack/templates/tharack/home.html
+++ b/oberlin/tharack/templates/tharack/home.html
@@ -3,6 +3,7 @@
 {%load static%}
 {% block body %}
     <link rel="stylesheet" href="{% static 'tharack/files/home.css' %}">
+    <script src="{% static 'tharack/backend/index.js' %}"></script>
     <section class="identify">
         <div>
             <h1>Hi, I am Tharcisse Ntirandekura</h1>
