--- a/oberlin/tharack/templates/tharack/portfolio.html
+++ b/oberlin/tharack/templates/tharack/portfolio.html
@@ -3,6 +3,7 @@
 {%load static%}
 {% block body %}
     <link rel="stylesheet" href="{% static 'tharack/files/portfolio.css' %}">
+    <script src="{% static 'tharack/backend/index.js' %}"></script>
     <div class="intro">
         <h1>welcome to my projects</h1>
     </div>
