--- a/oberlin/tharack/templates/tharack/resume.html
+++ b/oberlin/tharack/templates/tharack/resume.html
@@ -4,7 +4,7 @@
 {% block body %}
     <link rel="stylesheet" href="{% static 'tharack/files/resume.css' %}">
     <section class="resume">
-        <img src="{% static 'tharack/images/myresume.pdf' %}">
+        <img src="{{image}}">
     </section>
 
 {% endblock body %}
