--- a/oberlin/tharack/templates/tharack/contact.html
+++ b/oberlin/tharack/templates/tharack/contact.html
@@ -6,12 +6,12 @@
     <script src="{% static 'tharack/backend/index.js' %}"></script>
     <section class="contact_bar">
         <div class="contact">
-            <h3>+1 440 458 1012</h3>
+            <h3>(440) 458 1012</h3>
             <h3>tharcissentira@gmail.com</h3>
             <h3>135 W. Lorain St</h3>
-            <h3>oberlin</h3>
-            <h3>Ohio</h3>
+            <h3>Oberlin, OH</h3>
             <h4>United States</h4>
+
         </div>
         <div class="message">
             <div class="email">
