--- a/oberlin/tharack/templates/tharack/about.html
+++ b/oberlin/tharack/templates/tharack/about.html
@@ -13,6 +13,7 @@
             As my hobby, I develop games to improve my design skills and I am eager to learning new skills always!
             </p>
         </div>
+        <script src="{% static 'tharack/backend/index.js' %}"></script>
     </section>
 
 {% endblock body %}
