--- a/oberlin/tharack/static/tharack/files/about.css
+++ b/oberlin/tharack/static/tharack/files/about.css
@@ -1,6 +1,3 @@
-body{
-
-}
 
 .identify .hobby{
     display: grid;
@@ -80,7 +77,9 @@ body{
     }
     .about-me{
      position : relative;
+     font-size: 18px;
     }
+
 }
 
 @media screen and (min-width :800px) {
