--- a/oberlin/tharack/templates/tharack/layout.html
+++ b/oberlin/tharack/templates/tharack/layout.html
@@ -29,6 +29,7 @@
     <div class="menue">
         <span id='show' onclick="toggles()" class="fa fa-bars"></span>
         <span id="backs" onclick="change()" class="fa fa-toggle-on"></span>
+        <span class="fa fa-sun-o"></span>
     </div>
 
     {% block body %}
