--- a/oberlin/tharack/templates/tharack/layout.html
+++ b/oberlin/tharack/templates/tharack/layout.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Know more on Tharcisse and collatz sequence problem and get to visualize it">
+    <meta name="keywords" content="tharack, collatz, good portfolio,oberlin college">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
     <title>My personal portfolio</title>
     <!--<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>-->
     <script src="{% static 'tharack/backend/index.js' %}"></script>
