--- a/oberlin/tharack/static/tharack/files/collatz.css
+++ b/oberlin/tharack/static/tharack/files/collatz.css
@@ -52,3 +52,10 @@ a{
     text-decoration: none;
     color: rgb(62, 62, 174);
 }
+
+.demo{
+    display: grid;
+    justify-content: center;
+    padding-right: 10px;
+    padding-left: 10px;
+}
