--- a/oberlin/tharack/static/tharack/files/graph.css
+++ b/oberlin/tharack/static/tharack/files/graph.css
@@ -1,7 +1,20 @@
 body{
     background-color: rgb(7, 5, 19);
     color: rgb(191, 128, 65);
+    font-family: 'Reddit Mono';
+    font-size: 18px;
 
+}
+
+
+
+nav .header{
+    background-color: rgb(44, 36, 66);
+    z-index: 999;
+    position:fixed;
+    width: 100%;
+    margin: 0;
+    top: 0;
 }
 
 .contact{
@@ -112,6 +125,7 @@ img{
 
 .explanation{
     position: relative;
+    font-family: 'Reddit Mono', monospace;
     width: 35%;
     float: right;
     background-color: rgb(10, 8, 15);
@@ -129,7 +143,8 @@ img{
     border-color: rgb(60, 53, 79);
     border-style: solid;
     font-style: italic;
-    font-size: 30px;
+    font-size: 18px;
+    font-style: normal;
 }
 
 .user-input{
@@ -156,6 +171,11 @@ img{
     display: flex;
     flex-direction: column;
     gap: 10px;
+  }
+
+  .form-container button{
+    background-color: aquamarine;
+    border-radius: 7px;
   }
 
 .submit-bar{
@@ -198,6 +218,7 @@ img{
 
 .demo img{
     position: relative;
+    display: none;
     width: 100%;
     height: 10%;
     border-radius: 6px;
@@ -205,6 +226,41 @@ img{
     border-color: rgb(60, 53, 79);
 
    }
+
+.demo p{
+    position: relative;
+    font-style: normal;
+    color: rgb(175, 171, 171);
+    width: 100%;
+    height: 10%;
+    border-radius: 6px;
+    border-style: solid;
+    border-color: rgb(60, 53, 79);
+    font-size: 19px;
+
+   }
+.demo h{
+    color: rgb(179, 16, 114);
+}
+
+#code-snipet{
+    position: relative;
+    display: grid;
+    justify-content: center;
+    background-color: rgb(165, 16, 150);
+    width: 40%;
+    margin-left: 30%;
+    color: rgb(255, 255, 255);
+    border-radius: 7px;
+    border : solid;
+    border-color: rgb(165, 16, 150);
+    font-size: 20px;
+    
+}
+
+#code-snipet:hover{
+    background-color: rgb(164, 83, 156);;
+}
 h1,h2,h3{
     padding: 3px;
 
