--- a/oberlin/tharack/templates/tharack/signup.html
+++ b/oberlin/tharack/templates/tharack/signup.html
@@ -6,14 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="tharack:signup/" method="POST">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        
-        <input type="submit" value="Sign Up">
+    <form action="" method="post">
+        {% csrf_token %}
+        <input type="text" name="username" id="username" placeholder="username">
+        <input type="email" name="email" id="email" placeholder="Your email">
+        <input type="password" name="password" id="password" placeholder="password">
+        <input type="submit" value="Sign up">
     </form>
 </body>
 </html>
